Bug 465325 - Kate terminal receives cd (change directory) commands regardless program running in terminal
Summary: Kate terminal receives cd (change directory) commands regardless program runn...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-05 17:43 UTC by Robert Dady
Modified: 2023-02-09 08:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Dady 2023-02-05 17:43:48 UTC
SUMMARY
***
In Kate open a terminal and run e.g. python interpreter in that terminal. Should you open an other file in an other tab, assuming the file is in a different directory, python get cd (change directory) command, that it cannot interpret resulting in multiline python errors. Using someting different like octave, this is not an issue, as octave understands cd commands.
***


STEPS TO REPRODUCE
1.  Open Kate
2.  open some file
3.  open terminal
4. run python in terminal
5. open one more file in Kate that is in a different directory

OBSERVED RESULT
Python gets confused with cd commands.

EXPECTED RESULT
No cd command given to python - or any other program than bash (or any other different default shell)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 22.12.2
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-02-09 06:56:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1098
Comment 2 Christoph Cullmann 2023-02-09 08:39:55 UTC
Git commit fb26afa3f6567f375770e2f5d4d3f124254bde49 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 09/02/2023 at 08:39.
Pushed by cullmann into branch 'master'.

Konsole: Dont cd if a process is running in terminal
FIXED-IN: 23.04

M  +3    -0    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/commit/fb26afa3f6567f375770e2f5d4d3f124254bde49