Konsole: Dont cd if a process is running in terminal

BUG: 465325
FIXED-IN: 23.04